[package]
name = "http_mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="*", features=["derive"]}
actix-web = "3.3.2"
libc = "0.2.144"
logger = "0.4.0"
env_logger = "0.10.0"
log = "0.4.17"
