[package]
name = "http_mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.3.0", features=["derive"]}
reqwest = {version="0.11.18", features=["blocking"]}
thiserror = "1.0.40"
serde = {version = "1", features=["derive"]}
bincode = "1.3"
actix-web = "3.3.2"
libc = "0.2.144"
env_logger = "0.10.0"
log = "0.4.17"
